update logrotate to current needs (no longer an Arch user)

--- a/.config/logrotate.conf
+++ b/.config/logrotate.conf
@@ -15,23 +15,16 @@ create
 compress
 
 # Logs are moved into directory for rotation
-olddir /home/jzacsh/var/log/arch
+olddir /home/jzacsh/usr/log/arch
 
 # Ignore pacman saved files
 tabooext + .pacorig .pacnew .pacsave
 
-# Arch packages drop log rotation information into this directory
 include /etc/logrotate.d
 
-/home/jzacsh/var/log/* {
+/home/jzacsh/usr/log/* {
     copytruncate
     daily
-    rotate 5
-}
-
-# continuous integration scripts
-/home/jzacsh/var/log/int-build-* {
-    daily
-    rotate 5
-    maxage 15
+    rotate 8
+    size 30M
 }
