not using this as root

--- a/.config/logrotate.conf
+++ b/.config/logrotate.conf
@@ -20,7 +20,7 @@ olddir /home/jzacsh/usr/log/arch
 # Ignore pacman saved files
 tabooext + .pacorig .pacnew .pacsave
 
-include /etc/logrotate.d
+#include /etc/logrotate.d
 
 /home/jzacsh/usr/log/* {
     copytruncate
