things make more sense now. MUCH better; github.com/tmux-plugins/tmux-resurrect/issues/91

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -22,15 +22,11 @@ setw -g monitor-activity off
 # TODO fix; broken at tmux v1.9a
 # set-option status-right '%k:%M #[fg=white]%m/%D'
 
-# Establish initial session
-new  -d -s0 -nsyslog  'exec grc tail -F -n 50 /var/log/{dmsg,syslog,udev,{ufw,kern,auth}.log}' #screen 0:0
-neww -d     -nhtop    'exec sudo htop' #screen 0:1
-neww -d     -nirssi   'exec irssi'     #screen 0:2
-neww -d     -ncodez   'exec bash'      #screen 0:3
+# new  -d # -s0 -nsyslog  'exec grc tail -F -n 50 /var/log/{dmsg,syslog,udev,{ufw,kern,auth}.log}' #screen 0:0
 
-# don't care about ongoing dmesg and syslog info
-set-window-option -t0 monitor-activity off
-set-window-option -t0 visual-activity off
+# # don't care about ongoing dmesg and syslog info
+# set-window-option -t0 monitor-activity off
+# set-window-option -t0 visual-activity off
 
 # care about IRC activity
 # set-window-option -t:2 monitor-content 'zacsh'
@@ -61,7 +57,7 @@ bind * list-clients
 
 # monitor a window (useful when running a script, without X11 for xmessage)
 unbind m
-bind m setw monitor-activity; setw visual-activity on
+# bind m setw monitor-activity; setw visual-activity on
 
 # next ^@ ^N sp n
 unbind ^@
@@ -129,6 +125,13 @@ bind C-v run 'tmux set-buffer -- "$(xsel -o -b)"; tmux paste-buffer'
 
 
 
+# # Establish initial session
+# neww -d     -nhtop    'exec sudo htop' #screen 0:1
+# neww -d     -nirssi   'exec irssi'     #screen 0:2
+# neww -d     -ncodez   'exec bash'      #screen 0:3
+set -g @continuum-restore 'on'
+set -g @resurrect-processes 'ncmpcpp "~grc tail"'
+
 # per github.com/tmux-plugins/tmux-resurrect/tree/v2.4.0
 set -g @resurrect-strategy-vim 'session'
 
@@ -147,3 +150,6 @@ set -g @tpm_plugins '              \
 # Initializes TMUX plugin manager.
 # Keep this line at the very bottom of tmux.conf.
 run-shell '~/.tmux/plugins/tpm/tpm'
+
+
+########################################################
