dlete dead comments, update hastily-commented out section

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -22,15 +22,18 @@ setw -g monitor-activity off
 # TODO fix; broken at tmux v1.9a
 # set-option status-right '%k:%M #[fg=white]%m/%D'
 
-# new  -d # -s0 -nsyslog  'exec grc tail -F -n 50 /var/log/{dmsg,syslog,udev,{ufw,kern,auth}.log}' #screen 0:0
+# TODO if you need this monitoring config changed again, revisit how to trigger
+# it *after* tmux-continuum loads your `new -d` from resurrect
+# For more: github.com/tmux-plugins/tmux-resurrect/issues/91
+#  new  -d # -s0 -nsyslog  'exec grc tail -F -n 50 /var/log/{dmsg,syslog,udev,{ufw,kern,auth}.log}' #screen 0:0
 
-# # don't care about ongoing dmesg and syslog info
-# set-window-option -t0 monitor-activity off
-# set-window-option -t0 visual-activity off
+#  # don't care about ongoing dmesg and syslog info
+#  set-window-option -t0 monitor-activity off
+#  set-window-option -t0 visual-activity off
 
-# care about IRC activity
-# set-window-option -t:2 monitor-content 'zacsh'
-# set-window-option -t0 visual-content on
+#  care about IRC activity
+#  set-window-option -t:2 monitor-content 'zacsh'
+#  set-window-option -t0 visual-content on
 
 
 #---------------------------------------------------------
@@ -123,12 +126,6 @@ bind C-v run 'tmux set-buffer -- "$(xsel -o -b)"; tmux paste-buffer'
 
 ########################################################
 
-
-
-# # Establish initial session
-# neww -d     -nhtop    'exec sudo htop' #screen 0:1
-# neww -d     -nirssi   'exec irssi'     #screen 0:2
-# neww -d     -ncodez   'exec bash'      #screen 0:3
 set -g @continuum-restore 'on'
 set -g @resurrect-processes 'ncmpcpp "~grc tail"'
 
