--- a/i3/config
+++ b/i3/config
@@ -9,7 +9,7 @@
 #
 # Please see http://i3wm.org/docs/userguide.html for a complete reference!
 
-set $mod Mod4
+set $mod Mod1
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below. ISO 10646 = Unicode
@@ -160,3 +160,5 @@ bindsym XF86ScreenSaver exec --no-startup-id i3lock
 bindsym XF86Scleep exec --no-startup-id i3lock && dbus-send --system --dest=org.freedesktop.UPower --type=method_call --print-reply /org/freedesktop/UPower org.freedesktop.UPower.Suspend
 
 for_window [class="^Google-chrome$"] border none
+
+exec urxvtc
