--- a/.host/src/host.jzcarbon/.tmux.conf
+++ b/.host/src/host.jzcarbon/.tmux.conf
@@ -44,9 +44,9 @@ bind a send-prefix
 
 # screen ^C c
 unbind ^C
-bind ^C new-window
+bind ^C new-window -c '#{pane_current_path}'
 unbind c
-bind c new-window
+bind c new-window -c '#{pane_current_path}'
 
 # detach ^D d
 unbind ^D
