update split-window commands to also use current path (and group new-pane/window commands together) and remove current-path from new-window

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -48,7 +48,11 @@ bind a send-prefix
 unbind ^C
 bind ^C new-window -c '#{pane_current_path}'
 unbind c
-bind c new-window -c '#{pane_current_path}'
+bind c new-window -c
+unbind %
+bind % split-window -h -c '#{pane_current_path}'
+unbind _
+bind _ split-window -v -c '#{pane_current_path}'
 
 # detach ^D d
 unbind ^D
@@ -107,10 +111,6 @@ unbind ^L
 bind ^L refresh-client
 unbind l
 bind l refresh-client
-
-# split -v |
-unbind _
-bind _ split-window -v
 
 # " windowlist -b
 unbind '"'
