tmux: need to carry CLASSPATH and PATH around as well as update-environment defaults

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -35,6 +35,9 @@ setw -g monitor-activity off
 #  set-window-option -t:2 monitor-content 'zacsh'
 #  set-window-option -t0 visual-content on
 
+# add to default `update-environment`: CLASSPATH, PATH
+set-option -ag update-environment 'CLASSPATH'
+set-option -ag update-environment 'PATH'
 
 #---------------------------------------------------------
 # a whole lot of crap to make tmux feel more like screen |
