--- a/.tmux.conf
+++ b/.tmux.conf
@@ -51,7 +51,7 @@ bind a send-prefix
 unbind ^C
 bind ^C new-window -c '#{pane_current_path}'
 unbind c
-bind c new-window -c
+bind c new-window
 unbind %
 bind % split-window -h -c '#{pane_current_path}'
 unbind _
