fix bad Fontconfig - invalid "name" attribute

--- a/.fonts.conf
+++ b/.fonts.conf
@@ -11,7 +11,7 @@
 
     <!-- Helvetica is a non true type font, and will look bad.
          This replaces it with whatever is the default sans-serif font -->
-    <match target="pattern" name="family" >
+    <match target="pattern">
         <test name="family" qual="any" >
             <string>Helvetica</string>
         </test>
@@ -20,7 +20,7 @@
         </edit>
     </match>
 
-    <match target="pattern" name="family" >
+    <match target="pattern">
         <test name="family" qual="any" >
             <string>serif</string>
         </test>
