documenting issue encountered while trying to use tmux v2.1 feature and apparently still have something on my machine that is actually 2.0

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -19,6 +19,29 @@ set-option -g set-titles off
 setw -g aggressive-resize off
 setw -g monitor-activity off
 
+
+#########################################
+# 20160212, protip per townba@, in:
+#   https://groups.google.com/a/chromium.org/d/msg/chromium-hterm/WVj0XmNrc6o/czAIe4LeBwAJ
+# Enable mouse support.
+#   set -g mouse on
+#   # Toggle mouse support.
+#   bind-key M set -g mouse \; display "Mouse mode #{?mouse,on,off}."
+#   # Send mouse-scroll-down to the correct pane.
+#   bind-key -n WheelDownPane select-pane -t {mouse} \; send-keys -M
+#   # Eat scroll wheel events.
+#   bind-key -n WheelDownPane run "true"
+#   bind-key -n WheelUpPane run "true"
+#   bind-key -n C-WheelDownPane run "true"
+#   bind-key -n C-WheelUpPane run "true"
+#
+# zacsh@ uncomment when you figure out why your system still has tmux2.0 logic
+# living on it; that is: `find ... exec rm -v` all the tmux, reinstall v2.1
+# again, then uncomment this config block ^
+#########################################
+
+
+
 # TODO fix; broken at tmux v1.9a
 # set-option status-right '%k:%M #[fg=white]%m/%D'
 
