--- a/.tmux.conf
+++ b/.tmux.conf
@@ -4,7 +4,7 @@
 set-option -g default-command bash
 
 set-option -g default-terminal screen-256color
-set -g visual-activity off
+set -g visual-activity on
 
 set-window-option -g mode-keys vi # vi key
 set-option -g status-keys vi
