zomg, so exciting, battery status, yayyy

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -168,6 +168,7 @@ set -g @tpm_plugins '              \
   tmux-plugins/tpm                 \
   tmux-plugins/tmux-resurrect      \
   tmux-plugins/tmux-continuum      \
+  tmux-plugins/tmux-battery        \
 '
 
 # Initializes TMUX plugin manager.
