make use of tmux-battery plugin, and delete old status-right line that was broken

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -41,9 +41,7 @@ setw -g monitor-activity off
 #########################################
 
 
-
-# TODO fix; broken at tmux v1.9a
-# set-option status-right '%k:%M #[fg=white]%m/%D'
+set -g status-right 'Batt: #{battery_icon} #{battery_percentage} #{battery_remain} | %a %h-%d %H:%M '
 
 # TODO if you need this monitoring config changed again, revisit how to trigger
 # it *after* tmux-continuum loads your `new -d` from resurrect
