weechat; fixes all invisible papercuts of issi
also sets up most of [easy ltitle encryption-setup tutorial](https://github.com/GermainZ/weechat-vimode/blob/master/FAQ.md#esc-key-not-being-detected-instantly)

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,10 @@ cscope.files
 .vim/bundle/*
 .urxvt/urxvtd-*
 .irssi/away.log
+.weechat/logs
+.weechat/irc.conf
+.weechat/sec.conf
+.weechat/script/plugins.xml.gz
+.weechat/country/*.csv
+.weechat/weechat.log
+.weechat/cryptkey.*
