try to make use of highlightmon, missing my highlight window from irssi

--- a/.weechat/plugins.conf
+++ b/.weechat/plugins.conf
@@ -8,6 +8,17 @@ guile.check_license = "off"
 javascript.check_license = "off"
 lua.check_license = "off"
 perl.check_license = "off"
+perl.highmon.alignment = "channel"
+perl.highmon.away_only = "off"
+perl.highmon.color_buf = "on"
+perl.highmon.first_run = "true"
+perl.highmon.hotlist_show = "off"
+perl.highmon.logging = "on"
+perl.highmon.merge_private = "off"
+perl.highmon.nick_prefix = "<"
+perl.highmon.nick_suffix = ">"
+perl.highmon.output = "buffer"
+perl.highmon.short_names = "off"
 python.check_license = "off"
 python.country.show_in_whois = "on"
 python.country.show_localtime = "off"
