highlight basically everything; /save saves all the things

--- a/.weechat/plugins.conf
+++ b/.weechat/plugins.conf
@@ -11,7 +11,13 @@ perl.check_license = "off"
 perl.highmon.alignment = "channel"
 perl.highmon.away_only = "off"
 perl.highmon.color_buf = "on"
+perl.highmon.columbiaslack.#frontend = "on"
+perl.highmon.columbiaslack.#general = "on"
+perl.highmon.columbiaslack.#gs-students = "on"
+perl.highmon.columbiaslack.#papers = "on"
+perl.highmon.debian.#debian-next = "on"
 perl.highmon.first_run = "true"
+perl.highmon.freenode.#purism = "on"
 perl.highmon.hotlist_show = "off"
 perl.highmon.logging = "on"
 perl.highmon.merge_private = "off"
