fix annoying typo: "dmesg" not "dmsg"

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -46,7 +46,7 @@ set -g status-right 'Batt: #{battery_icon} #{battery_percentage} #{battery_remai
 # TODO if you need this monitoring config changed again, revisit how to trigger
 # it *after* tmux-continuum loads your `new -d` from resurrect
 # For more: github.com/tmux-plugins/tmux-resurrect/issues/91
-#  new  -d # -s0 -nsyslog  'exec grc tail -F -n 50 /var/log/{dmsg,syslog,udev,{ufw,kern,auth}.log}' #screen 0:0
+#  new  -d # -s0 -nsyslog  'exec grc tail -F -n 50 /var/log/{dmesg,syslog,udev,{ufw,kern,auth}.log}' #screen 0:0
 
 #  # don't care about ongoing dmesg and syslog info
 #  set-window-option -t0 monitor-activity off
