bug fix: point to correct exec name for my xautolock wrapper

--- a/.config/i3/config
+++ b/.config/i3/config
@@ -158,7 +158,7 @@ bindsym XF86AudioMute exec pactl set-sink-mute @DEFAULT_SINK@ toggle
 # expected modification:
 bindsym Mod1+Mod4+l exec i3-lock-screen
 exec --no-startup-id nm-applet # networking-manager
-exec --no-startup-id autolock &
+exec --no-startup-id i3-autolock &
 
 # from http://miek.nl/posts/2014/Mar/08/use-i3/
 exec --no-startup-id blueman-applet
