fixes bug in i3 config -- cannot implicitly overwrite own keybindings

--- a/.config/i3/config
+++ b/.config/i3/config
@@ -51,7 +51,7 @@ bindsym $mod+Right focus right
 # move focused window
 bindsym $mod+Shift+j move left
 bindsym $mod+Shift+k move down
-bindsym $mod+Shift+l move up
+#bindsym $mod+Shift+l move up # overwriting below
 bindsym $mod+Shift+semicolon move right
 
 # alternatively, you can use the cursor keys:
