--- a/.config/i3/config
+++ b/.config/i3/config
@@ -155,9 +155,9 @@ bindsym XF86AudioRaiseVolume exec pactl set-sink-mute @DEFAULT_SINK@ 0 && pactl 
 bindsym XF86AudioMute exec pactl set-sink-mute @DEFAULT_SINK@ toggle
 
 # expected modification:
-bindsym Mod1+Shift+l exec i3-lock-screen
+bindsym $mod+Shift+l exec --no-startup-id ~/bin/share/i3-lock-screen
 exec --no-startup-id nm-applet # networking-manager
-exec --no-startup-id i3-autolock &
+exec --no-startup-id ~/bin/share/i3-autolock &
 
 # from http://miek.nl/posts/2014/Mar/08/use-i3/
 exec --no-startup-id blueman-applet
