fix sleep logic for i3
1. embed `display-external` call to disable monitor directly onto sleep
 - no need to do that each time screen is locked
 - but still need to do it because:
     Disconnect from secondary screens seems to be the only way to address
     symptom of BUG: machine hangs when i go to sleep with an external
     display plugged in
2. no need to make sleep commands depend on one another; they should all try to
   run (but *in* order, of course)

--- a/.config/i3/config
+++ b/.config/i3/config
@@ -163,8 +163,8 @@ exec --no-startup-id ~/bin/share/i3-autolock &
 exec --no-startup-id blueman-applet
 
 # Bind the Fn+F3/Fn+F4 keys to lock/lock+suspend respectively
-bindsym XF86ScreenSaver exec --no-startup-id i3-lock-screen
-bindsym XF86Sleep exec --no-startup-id i3-lock-screen && dbus-send --system --dest=org.freedesktop.UPower --type=method_call --print-reply /org/freedesktop/UPower org.freedesktop.UPower.Suspend
+bindsym XF86ScreenSaver exec --no-startup-id ~/bin/share/i3-lock-screen
+bindsym XF86Sleep exec --no-startup-id  ~/bin/share/display-external offexternal ; ~/bin/share/i3-lock-screen ; dbus-send --system --dest=org.freedesktop.UPower --type=method_call --print-reply /org/freedesktop/UPower org.freedesktop.UPower.Suspend
 
 for_window [class="^Google-chrome$"] border none
 
