--- a/.tmux.conf
+++ b/.tmux.conf
@@ -3,7 +3,7 @@
 # do not need a login shell
 set-option -g default-command bash
 
-set-option -g default-terminal screen-256color
+set-option -g default-terminal tmux
 set -g visual-activity on
 
 set-window-option -g mode-keys vi # vi key
