--- a/.config/i3status/config
+++ b/.config/i3status/config
@@ -18,6 +18,7 @@ order += "run_watch VPN"
 order += "wireless _first_"
 order += "ethernet _first_"
 order += "battery 0"
+order += "volume master"
 order += "load"
 order += "tztime local"
 
@@ -34,6 +35,11 @@ ethernet _first_ {
 
 battery 0 {
         format = "%status %percentage %remaining"
+}
+
+volume master {
+  format = "♪: %volume"
+  format_muted = "♪: 0%%"
 }
 
 run_watch DHCP {
