--- a/.host/src/host.jzcarbon/.tmux.conf
+++ b/.host/src/host.jzcarbon/.tmux.conf
@@ -3,7 +3,9 @@
 # do not need a login shell
 set-option -g default-command bash
 
+# see https://github.com/tmux/tmux/blob/20d97eb849282a/FAQ#L179-196
 set-option -g default-terminal screen-256color
+
 set -g visual-activity off
 
 set-window-option -g mode-keys vi # vi key
