--- a/.config/autostart/mpd.desktop
+++ b/.config/autostart/mpd.desktop
@@ -3,7 +3,7 @@ Encoding=UTF-8
 Type=Application
 Name=Music Player Daemon
 Comment=Server for playing audio files
-Exec=mpd >/home/jzacsh/usr/log/autostart-mpd.log 2>&1
+Exec=mpd >>/home/jzacsh/usr/log/autostart-mpd.log 2>&1
 StartupNotify=false
 Terminal=false
 Hidden=false
