--- a/.config/i3/config
+++ b/.config/i3/config
@@ -143,10 +143,9 @@ mode "resize" {
 
 bindsym $mod+r mode "resize"
 
-# Start i3bar to display a workspace bar (plus the system information i3status
-# finds out, if available)
+# Start i3bar to display a workspace bar
 bar {
-        status_command i3status
+        status_command i3blocks
 }
 
 # Pulse Audio controls
