oops: wrong refresh-interval setting

--- a/.config/i3blocks/config
+++ b/.config/i3blocks/config
@@ -33,7 +33,7 @@ markup=none
 [mailmon]
 command=$HOME/.config/i3blocks/count_mail_h
 color=#FFa500
-interval=once
+interval=30
 
 # Volume indicator
 #
