--- a/.config/i3blocks/config
+++ b/.config/i3blocks/config
@@ -37,6 +37,20 @@ command=$HOME/.config/i3blocks/count_mail_h
 color=#ffa500
 interval=30
 
+[worldclock]
+instance=Europe/Paris
+label=paris
+command=TZ=$BLOCK_INSTANCE date '+%H:%M,%Z'
+color=#fff000
+interval=5
+
+[worldclock]
+instance=America/Chicago
+label=chicago
+command=TZ=$BLOCK_INSTANCE date '+%H:%M,%Z'
+color=#add8e6
+interval=5
+
 [punchmon]
 instance=clock
 command=$HOME/.config/i3blocks/punchmon $BLOCK_INSTANCE
