--- a/.gitconfig
+++ b/.gitconfig
@@ -42,6 +42,7 @@
   added = yellow
   changed = green
   untracked = cyan
-
+[branch "master"]
+  mergeoptions = --no-ff
 [init]
 	templatedir = ~/.config/git_template
