split clock into two block instances: colorful one for time, regular for date

--- a/.config/i3blocks/config
+++ b/.config/i3blocks/config
@@ -152,8 +152,15 @@ interval=30
 # Date Time
 #
 [time]
-command=date '+%Y-%m-%d %H:%M:%S'
+instance=date
+command=date '+%Y-%m-%d'
+interval=60
+
+[time]
+instance=time
+command=date '+%H:%M:%S'
 interval=5
+color=#fff000
 
 # Generic media player support
 #
