--- a/.gitconfig
+++ b/.gitconfig
@@ -7,7 +7,7 @@
 [alias]
   st = status
   last = log -1 HEAD
-  lg = log --show-signature --graph
+  lg = log --show-signature --graph --decorate
 [core]
   pager = less -FRSX
   editor = vim
