--- a/.gitconfig
+++ b/.gitconfig
@@ -9,7 +9,7 @@
   last = log -1 HEAD
   lg = log --show-signature --graph --decorate
 [core]
-  pager = less --no-init --RAW-CONTROL-CHARS --quit-if-one-screen --chop-long-lines
+  pager = less --no-init --RAW-CONTROL-CHARS --quit-if-one-screen
   editor = vim
   excludesFile = ~/.gitignore
 ;  notesRef = refs/notes/*
