utilize beeping provided in github.com/jzacsh/bin/commit/c68e7d4856982c8a45f1

--- a/.config/i3/config
+++ b/.config/i3/config
@@ -149,9 +149,9 @@ bar {
 }
 
 # Pulse Audio controls
-bindsym XF86AudioLowerVolume exec pactl set-sink-mute @DEFAULT_SINK@ 0 && pactl set-sink-volume @DEFAULT_SINK@ '-5%'
-bindsym XF86AudioRaiseVolume exec pactl set-sink-mute @DEFAULT_SINK@ 0 && pactl set-sink-volume @DEFAULT_SINK@ '+5%'
-bindsym XF86AudioMute exec pactl set-sink-mute @DEFAULT_SINK@ toggle
+bindsym XF86AudioLowerVolume exec ~/bin/share/minwm_volume '-5'
+bindsym XF86AudioRaiseVolume exec ~/bin/share/minwm_volume '+5'
+bindsym XF86AudioMute exec ~/bin/share/minwm_volume
 
 # screen brightness
 bindsym XF86MonBrightnessUp   exec xbacklight -inc 6
