remove useless border from my terminals

--- a/.config/i3/config
+++ b/.config/i3/config
@@ -163,6 +163,7 @@ bindsym $mod+Mod4+l exec --no-startup-id ~/bin/share/i3-lock-screen
 
 for_window [class="^Google-chrome$"] border none
 for_window [class="^Mozilla.Firefox$"] border none
+for_window [class="URxvtc"] border none
 
 # Kick off .desktop autostart files
 exec dex --autostart --environment=i3
