--- a/.config/i3/config
+++ b/.config/i3/config
@@ -165,5 +165,7 @@ for_window [class="^Google-chrome$"] border none
 for_window [class="^Mozilla.Firefox$"] border none
 for_window [class="URxvtc"] border none
 
+workspace_auto_back_and_forth yes
+
 # Kick off .desktop autostart files
 exec dex --autostart --environment=i3
