--- a/.config/i3/config
+++ b/.config/i3/config
@@ -147,6 +147,9 @@ bindsym $mod+r mode "resize"
 bar {
         status_command i3blocks
         position top
+        colors {
+          background #333333
+        }
 }
 
 # Pulse Audio controls
