--- a/.config/i3/config
+++ b/.config/i3/config
@@ -179,6 +179,7 @@ bindsym $mod+Mod4+l exec --no-startup-id ~/bin/share/i3-lock-screen
 for_window [class="^Google-chrome$"] border none
 for_window [class="^Mozilla.Firefox$"] border none
 for_window [class="(UR|ur)xvt"] border pixel 1
+for_window [title="Signal"] move to workspace $wspname3
 
 workspace_auto_back_and_forth yes
 
