--- a/.config/i3/config
+++ b/.config/i3/config
@@ -162,6 +162,8 @@ bar {
         colors {
           background #333333
         }
+        wheel_up_cmd nop
+        wheel_down_cmd nop
 }
 
 # Pulse Audio controls
