--- a/.config/i3blocks/config
+++ b/.config/i3blocks/config
@@ -144,8 +144,7 @@ min_width=CPU: 100.00%
 #
 # The battery instance defaults to 0.
 [battery]
-label=BAT
-#label=⚡
+label=⚡
 #instance=1
 interval=30
 
