--- a/.config/gpg.conf
+++ b/.config/gpg.conf
@@ -49,7 +49,10 @@ keyserver hkps://hkps.pool.sks-keyservers.net
 
 # Provide a certificate store to override the system default
 # Get this from https://sks-keyservers.net/sks-keyservers.netCA.pem
-keyserver-options ca-cert-file=/usr/local/share/ca-certificates/sks-keyservers.netCA.pem
+#keyserver-options ca-cert-file=/usr/local/share/ca-certificates/sks-keyservers.netCA.pem
+#
+#2016-08-17 jzacsh@ commented out above ^; no longer relevant, as i'm on a
+#rolling distro (debian sid); see: https://github.com/riseupnet/riseup_help/issues/294
 
 # Set the proxy to use for HTTP and HKP keyservers - default to the standard
 # local Tor socks proxy
