now that systemd is handling this, i do *not* want to hide logs; i want to see what goes wrong if i poke in journalctl

--- a/.config/systemd/user/urxvtd.service
+++ b/.config/systemd/user/urxvtd.service
@@ -2,7 +2,7 @@
 Description=RXVT-Unicode Daemon
 
 [Service]
-ExecStart=/usr/bin/urxvtd --opendisplay --quiet
+ExecStart=/usr/bin/urxvtd --opendisplay
 
 [Install]
 WantedBy=default.target
