--- a/.tmux.conf
+++ b/.tmux.conf
@@ -150,6 +150,9 @@ bind C-c run 'tmux show-buffer | xsel -i -b'
 bind C-v run 'tmux set-buffer -- "$(xsel -o -b)"; tmux paste-buffer'
 
 
+# per https://github.com/neovim/neovim/wiki/FAQ#esc-in-tmux-or-gnu-screen-is-delayed
+set -g escape-time 10
+
 ########################################################
 
 set -g @continuum-restore 'on'
