--- a/.config/autostart/xmomdap.desktop
+++ b/.config/autostart/xmomdap.desktop
@@ -3,7 +3,7 @@ Encoding=UTF-8
 Type=Application
 Name=Xmodmap
 Comment=Run my xmodmap
-Exec=xmodmap .Xmodmap
+Exec=/usr/bin/xmodmap .Xmodmap
 StartupNotify=true
 Terminal=false
 Hidden=false
