fix broken logrotate user runtime (perm denied for root status file)

--- a/.config/systemd/user/logrotate.service
+++ b/.config/systemd/user/logrotate.service
@@ -3,4 +3,4 @@ Description=Logrotate makes sure log files don't get out of control
 
 [Service]
 Type=oneshot
-ExecStart=/usr/sbin/logrotate --force ~/.config/logrotate.conf
+ExecStart=/usr/sbin/logrotate --state %t/logrotate.state --force %h/.config/logrotate.conf
