--- a/.host/src/host.jznuc/syncthing.desktop
+++ b/.host/src/host.jznuc/syncthing.desktop
@@ -1,7 +1,7 @@
 [Desktop Entry]
 Name=Syncthing
 Comment=Start syncthing on non-systemd machines
-Exec=/home/jzacsh/bin/local/syncthing -no-browser /home/jzacsh/.config/syncthing/ >> /home/jzacsh/usr/log/autostart-syncthing.log 2>&1
+Exec=/home/jzacsh/bin/local/syncthing -no-browser -home=/home/jzacsh/.config/syncthing/ >> /home/jzacsh/usr/log/autostart-syncthing.log 2>&1
 GenericName=Decentralized file syncing service
 StartupNotify=true
 Terminal=false
