--- a/.config/systemd/user/godoc.service
+++ b/.config/systemd/user/godoc.service
@@ -3,7 +3,7 @@ Description=Go Documentation Server (Headless)
 
 [Service]
 # TODO(zacsh) when i've figured out env. variables for systemd user-files, use $GOPATH
-ExecStart=/home/jzacsh/usr/lib/go/bin/godoc -http=:6060
+ExecStart=/bin/bash -c 'godoc -http=:6060'
 
 [Install]
 WantedBy=default.target
