ensure execution is clear

--- a/.config/systemd/user/lxc-autostart.service
+++ b/.config/systemd/user/lxc-autostart.service
@@ -3,7 +3,7 @@ Description=Autostart Unpriveleged LXCs
 
 [Service]
 Type=oneshot
-ExecStart=/bin/bash -c 'lxc-autostart'
+ExecStart=/bin/bash -c 'set -x; lxc-autostart'
 
 [Install]
 WantedBy=default.target
