--- a/.config/systemd/user/lxc-autostart.service
+++ b/.config/systemd/user/lxc-autostart.service
@@ -4,6 +4,7 @@ Description=Autostart Unpriveleged LXCs
 [Service]
 Type=oneshot
 ExecStart=/bin/bash -c 'set -x; lxc-autostart'
+TimeoutStopUSec=3min 30s
 
 [Install]
 WantedBy=default.target
