no need to wait for this unit to start

--- a/.config/systemd/user/lxc-autostart.service
+++ b/.config/systemd/user/lxc-autostart.service
@@ -5,6 +5,7 @@ Description=Autostart Unpriveleged LXCs
 Type=oneshot
 ExecStart=/bin/bash -c 'set -x; lxc-autostart'
 TimeoutStopUSec=3min 30s
+NonBlocking=yes
 
 [Install]
 WantedBy=default.target
