--- a/.config/systemd/user/lxc-autostart.service
+++ b/.config/systemd/user/lxc-autostart.service
@@ -2,10 +2,8 @@
 Description=Autostart Unpriveleged LXCs
 
 [Service]
-Type=oneshot
-ExecStart=/bin/bash -c 'set -x; lxc-autostart'
-TimeoutStopUSec=3min 30s
-NonBlocking=yes
+Type=simple
+ExecStart=/bin/bash -c 'lxc-autostart'
 
 [Install]
 WantedBy=default.target
