until lxc/lxc #1681 is solved, some stopgaps
- service: die faster than default
- notify me *every* shell if i forgot to turn something on

--- a/.config/systemd/user/lxc-autostart.service
+++ b/.config/systemd/user/lxc-autostart.service
@@ -4,6 +4,7 @@ Description=Autostart Unpriveleged LXCs
 [Service]
 Type=simple
 ExecStart=/bin/bash -c 'lxc-autostart'
+TimeoutStopSec=20s
 
 [Install]
 WantedBy=default.target
