limit godoc analysis; https://www.freedesktop.org/software/systemd/man/systemd.exec.html#LimitCPU

--- a/.config/systemd/user/godoc.service
+++ b/.config/systemd/user/godoc.service
@@ -6,6 +6,11 @@ Type=simple
 # TODO(zacsh) when i've figured out env. variables for systemd user-files, use $GOPATH
 Environment="GOPATH=%h/usr/lib/go"
 ExecStart=/bin/bash -c 'godoc -analysis=type -http=:6060'
+LimitCORE=1
+LimitNICE=10
+# 20170710: with -analysis=type, takes 6+ minutes on my own $GOPATH (ie: not
+# only stdlib) on laptop w/8GB RAM and made it unresponsive for at least a
+# minute
 
 [Install]
 WantedBy=default.target
