godoc: ensure goroutines do not kill my machine

--- a/.config/systemd/user/godoc.service
+++ b/.config/systemd/user/godoc.service
@@ -5,6 +5,7 @@ Description=Go Documentation Server (Headless)
 Type=simple
 # TODO(zacsh) when i've figured out env. variables for systemd user-files, use $GOPATH
 Environment="GOPATH=%h/usr/lib/go"
+Environment="GOMAXPROCS=1"
 ExecStart=/bin/bash -c 'godoc -analysis=type -http=:6060'
 LimitCORE=1
 LimitNICE=17
