--- a/.config/systemd/user/godoc.service
+++ b/.config/systemd/user/godoc.service
@@ -9,6 +9,7 @@ Environment="GOMAXPROCS=1"
 ExecStart=/bin/bash -c 'godoc -analysis=type -http=:6060'
 LimitCORE=1
 LimitNICE=18
+LimitAS=2G:5G
 # 20170710: with -analysis=type, takes 6+ minutes on my own $GOPATH (ie: not
 # only stdlib) on laptop w/8GB RAM and made it unresponsive for at least a
 # minute
