--- a/.config/i3/config
+++ b/.config/i3/config
@@ -198,5 +198,9 @@ for_window [title="Signal"] move to workspace $wspname3
 
 workspace_auto_back_and_forth yes
 
+# disable tap-to-click
+#   found in https://unix.stackexchange.com/a/290026
+exec --no-startup-id synclient TapButton1=0 TapButton2=0
+
 # Kick off .desktop autostart files
 exec dex --autostart --environment=i3
