document where flags here come from

--- a/.config/systemd/user/godoc.service
+++ b/.config/systemd/user/godoc.service
@@ -1,5 +1,6 @@
 [Unit]
 Description=Go Documentation Server (Headless)
+Documentation=https://godoc.org/golang.org/x/tools/cmd/godoc
 
 [Service]
 Type=simple
